--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
+    "@angular/cdk": "^13.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
     "@angular/core": "^14.0.0",
@@ -19,8 +20,11 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@apollo/client": "^3.0.0",
+    "@fortawesome/fontawesome-free": "^6.0.0",
     "apollo-angular": "^4.0.1",
+    "chart.js": "^3.1.1",
     "graphql": "^16",
+    "mdb-angular-ui-kit": "^2.3.0",
     "mdbootstrap": "^4.20.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -38,5 +42,8 @@
     "karma-jasmine": "~5.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.7.2"
+  },
+  "overrides": {
+    "autoprefixer": "10.4.5"
   }
 }
