--- a/package.json
+++ b/package.json
@@ -21,12 +21,17 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@apollo/client": "^3.0.0",
+    "@ckeditor/ckeditor5-angular": "^4.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^35.1.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^35.1.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
+    "@kolkov/angular-editor": "^3.0.0-beta.0",
     "apollo-angular": "^4.0.1",
     "chart.js": "^3.1.1",
     "graphql": "^16",
     "mdb-angular-ui-kit": "^2.3.0",
     "mdbootstrap": "^4.20.0",
+    "ngx-quill": "^19.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -35,6 +40,7 @@
     "@angular-devkit/build-angular": "^14.0.1",
     "@angular/cli": "^14.2.3",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/ckeditor__ckeditor5-build-classic": "^29.0.1",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
