--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,7 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
-    "lib": [
-      "es2020",
-      "dom",
-      "esnext.asynciterable"
-    ],
+    "lib": ["es2020", "dom", "esnext.asynciterable"],
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
